<resources>
    <string name="app_name">Barang</string>
    <string name="login">Login</string>
    <string name="error_empty_email">Harap masukan email</string>
    <string name="error_email_wrong">Format email salah</string>
    <string name="error_password_wrong">Format password salah</string>
    <string name="error_empty_password">Harap masukan password</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="quantity">Quantity</string>
    <string name="tambah">Tambah</string>
    <string name="qty">Qty</string>
    <string name="harga">Harga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="editor_barang">Editor Barang</string>
    <string name="submit">Submit</string>
    <string name="data_kosong"> " Tidak ada data yang bisa ditampilkan "</string>
</resources>