<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tradehistoryitem"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:orientation="horizontal"
        android:shadowRadius="10"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="3"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <TextView
                android:id="@+id/tv_nama_barang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:hint="@string/nama_barang"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_qty_barang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:hint="@string/qty"
                android:textAlignment="center"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tv_harga_barang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/harga"
                android:textAlignment="textEnd"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>